@@ -4,6 +4,7 @@ systemd System and Service Manager
 ~~~~~~~
  * core:
     - use /dev/null as output if incorrect value is set;
+    - use /dev/null as input if incorrect value is set;
 
    systemd (214.5)
 ~~~~~~~
